# difftrain

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_train_step.py
configs/: base.yaml  smoke_text2image.yaml
docs/: cloud_test_engineer_prompt.md  mvp_smoke_checklist.md  mvp_spec.md
scripts/: __init__.py  make_dummy_imagefolder.py  setup_runtime_env.sh  smoke_repro.py  train_text_to_image.py  validate_config.py
src/difftrain/: config.py
src/difftrain/training/: __init__.py  batch.py  dream.py  interfaces.py  runner.py  train_step.py
src/difftrain/utils/: __init__.py  dummy_data.py  manifest.py  repro.py
tests/: conftest.py  fixtures.py  test_config_roundtrip.py  test_dream_strategy.py  test_dummy_data.py  test_manifest_smoke.py  test_repro_artifacts.py  test_repro_seed.py  test_runner.py  test_runner_precision_and_accum.py  test_text2image_train_gpu_smoke.py  test_train_step.py  test_train_step_contracts.py  testing_utils.py
