[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "difftrain"
version = "0.1.0"
description = "Training-friendly diffusion research toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
text2image = [
  "accelerate",
  "datasets",
  "diffusers",
  "huggingface_hub",
  "Pillow",
  "torchvision",
  "tqdm",
  "transformers",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "unit: fast unit tests (CPU, offline)",
  "integration: integration tests (may use external deps)",
  "slow: slow tests (may download models or run training)",
  "cuda: tests that require CUDA",
  "text2image: tests that require text2image extras",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]

